[gd_scene load_steps=5 format=2]

[ext_resource path="res://uipaused/PauseMenu2.gd" type="Script" id=1]
[ext_resource path="res://Settings_Menu.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://data/bonard.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="PauseMenu2" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -42.0
margin_top = -13.0
margin_right = 5.0
margin_bottom = 16.0
color = Color( 0.380392, 0.372549, 0.372549, 0.462745 )

[node name="Button" type="Button" parent="."]
margin_left = 71.0
margin_top = 185.0
margin_right = 173.0
margin_bottom = 205.0
rect_scale = Vector2( 2, 3 )
text = "ResumeGame"
flat = true

[node name="Button2" type="Button" parent="."]
margin_left = 72.0
margin_top = 255.0
margin_right = 128.0
margin_bottom = 275.0
rect_scale = Vector2( 2, 3 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Setting"
flat = true

[node name="Button3" type="Button" parent="."]
margin_left = 78.0
margin_top = 324.0
margin_right = 115.0
margin_bottom = 347.0
rect_scale = Vector2( 2, 3 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "EXIT"
flat = true

[node name="Button4" type="Button" parent="."]
margin_left = 73.0
margin_top = 124.0
margin_right = 155.0
margin_bottom = 144.0
rect_scale = Vector2( 1.7925, 2.76714 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back Menu"
flat = true

[node name="SettingsMenu" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
